# job-tracker

./: .gitignore  README.md
.github/workflows/: backend.tests.yml  frontend.lint.yml  frontend.tests.yml  tests.yml
api/: README.md  candidatures.db  pyproject.toml
api/app/: database.py  main.py
api/app/crud/: candidatures.py  user.py
api/app/models/: candidature.py  user.py
api/app/routes/: auth.py  candidatures.py  user.py
api/app/schemas/: candidature.py  user.py
api/app/security/: deps.py  jwt.py
api/tests/: conftest.py  test_authentification.py  test_candidature.py
frontend/: README.md  angular.json  biome.json  eslint.config.js  package-lock.json  package.json  tsconfig.json
frontend/src/: index.html  main.ts
frontend/src/app/: app.component.spec.ts  app.component.ts  app.routes.ts
frontend/src/app/components/add-candidature-modal/: add-candidature-modal.component.css  add-candidature-modal.component.html  add-candidature-modal.component.spec.ts  add-candidature-modal.component.ts
frontend/src/app/components/auth-form/: auth-form.component.css  auth-form.component.html  auth-form.component.ts
frontend/src/app/components/best-performances/: best-performances.component.css  best-performances.component.html  best-performances.component.spec.ts  best-performances.component.ts
frontend/src/app/components/card/: candidature-card.component.css  candidature-card.component.html  candidature-card.component.ts
frontend/src/app/components/column/: application-column.component.css  application-column.component.html  application-column.component.spec.ts  application-column.component.ts
frontend/src/app/components/counter/: counter.component.css  counter.component.html  counter.component.ts
frontend/src/app/components/daily-challenges/: daily-challenges.component.css  daily-challenges.component.html  daily-challenges.component.spec.ts  daily-challenges.component.ts
frontend/src/app/components/planner-header/: planner-header.component.css  planner-header.component.html  planner-header.component.spec.ts  planner-header.component.ts
frontend/src/app/components/spline-area-chart/: spline-area-chart.component.css  spline-area-chart.component.html  spline-area-chart.component.spec.ts  spline-area-chart.component.ts
frontend/src/app/interceptors/: auth.interceptor.ts
frontend/src/app/models/: candidature.model.ts  column.model.ts  user.model.ts
frontend/src/app/pages/applications/: applications.component.css  (+3 more)
frontend/src/app/services/: AuthService.ts  CandidatureService.ts  chart-data.service.ts
(+4 files in other folders)
